travelo-k8s/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: travelo
spec:
  selector:
    app: travelo-backend
  ports:
    - port: 8080
      targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment  
  namespace: travelo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: travelo-backend
  template:
    metadata:
      labels:
        app: travelo-backend
    spec:
      containers:
        - name: backend
          image: lamsaafyassine/travelo-backend:15592c0aed3d48818ac2a9506c235190f53c5505
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /api/hello
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/hello
              port: 8080
            initialDelaySeconds: 40
            periodSeconds: 20
          startupProbe:
            httpGet:
              path: /api/hello
              port: 8080
            failureThreshold: 30
            periodSeconds: 10
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
