travelo-k8s/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: travelo
  labels:
    app: travelo-frontend
spec:
  selector:
    app: travelo-frontend
  ports:
    - port: 80
      targetPort: 3000
      name: http
    - port: 9113
      targetPort: 9113
      name: metrics

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: travelo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: travelo-frontend
  template:
    metadata:
      labels:
        app: travelo-frontend
    spec:
      containers:
        - name: frontend
          image: alaej/travelo-frontend:cc27338e3675172c4dc88fc627c3891f10bc1fb2
          ports:
            - containerPort: 3000
          # --- Probes ---
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
          startupProbe:
            httpGet:
              path: /
              port: 3000
            failureThreshold: 30
            periodSeconds: 10
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "250m"
        - name: nginx-exporter
          image: nginx/nginx-prometheus-exporter:latest
          args:
            - "-nginx.scrape-uri=http://localhost:3000/nginx_status"
          ports:
            - containerPort: 9113
              name: metrics
          resources:
            requests:
              memory: "32Mi"
              cpu: "25m"
            limits:
              memory: "64Mi"
              cpu: "50m"
